[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/ScrollContainerCustomStyle.tres" type="StyleBox" id=1]
[ext_resource path="res://resources/FactorySandboxButtonGroup.tres" type="ButtonGroup" id=2]
[ext_resource path="res://titlescripts/PopulateResourcesGrid.gd" type="Script" id=3]
[ext_resource path="res://titlescripts/SliderToText.gd" type="Script" id=4]
[ext_resource path="res://titlescripts/PopulateRecipiesGrid.tres.gd" type="Script" id=5]
[ext_resource path="res://scenes/InputSelector.tscn" type="PackedScene" id=6]
[ext_resource path="res://titlescripts/MissionConfUpdater.gd" type="Script" id=7]

[sub_resource type="GDScript" id=1]
script/source = "extends OptionButton
tool

onready var mission_container : VBoxContainer = find_parent(\"MissionContainer\")

func update_resource_recipy():
	if Global.data == null:
		return
	
	var selected_at_reset : String = \"\"
	if get_item_count() > 0:
		selected_at_reset = get_selected_metadata() 
	clear()
	
	var i : int = 0
	for key in Global.data:
		if Global.data[key][\"special\"] == true:
			continue
		if Global.data[key][\"mode\"] == \"-\":
			continue
		add_item(key + Global.data[key][\"mode\"], i)
		set_item_metadata(i, key)
		if key == selected_at_reset:
			select(i)
		i += 1

func _ready():
	clear()
	update_resource_recipy()


func _on_GoalButton_item_selected(index):
	mission_container.update_configuration()
"

[node name="Mission1" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissionContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 1008.0
margin_bottom = 556.0
custom_constants/separation = 8
script = ExtResource( 7 )

[node name="Section1" type="HBoxContainer" parent="MissionContainer"]
margin_right = 1000.0
margin_bottom = 14.0

[node name="Section1a" type="Label" parent="MissionContainer/Section1"]
margin_right = 221.0
margin_bottom = 14.0
text = "Mission Requiremens and Settings"

[node name="GridContainer2" type="GridContainer" parent="MissionContainer"]
margin_top = 22.0
margin_right = 1000.0
margin_bottom = 66.0
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MissionContainer/GridContainer2"]
margin_right = 484.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MissionContainer/GridContainer2/HBoxContainer"]
margin_top = 3.0
margin_right = 33.0
margin_bottom = 17.0
text = "Goal:"

[node name="GoalButton" type="OptionButton" parent="MissionContainer/GridContainer2/HBoxContainer" groups=[
"ResRecUpdateGroup",
]]
margin_left = 37.0
margin_right = 101.0
margin_bottom = 20.0
rect_min_size = Vector2( 64, 16 )
script = SubResource( 1 )

[node name="WarningButton" type="Button" parent="MissionContainer/GridContainer2/HBoxContainer"]
visible = false
margin_left = 105.0
margin_right = 137.0
margin_bottom = 20.0
rect_min_size = Vector2( 32, 0 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0.5, 0.5, 1 )
custom_colors/font_color_pressed = Color( 0.5, 0, 0, 1 )
text = "!!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningPlaceholder" type="Container" parent="MissionContainer/GridContainer2/HBoxContainer"]
margin_left = 105.0
margin_right = 137.0
margin_bottom = 20.0
rect_min_size = Vector2( 32, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Amount" type="Label" parent="MissionContainer/GridContainer2/HBoxContainer"]
margin_left = 141.0
margin_top = 3.0
margin_right = 196.0
margin_bottom = 17.0
text = "Amount:"

[node name="N" type="Label" parent="MissionContainer/GridContainer2/HBoxContainer"]
margin_left = 200.0
margin_top = 3.0
margin_right = 232.0
margin_bottom = 17.0
rect_min_size = Vector2( 32, 0 )
text = "75"
align = 2

[node name="GoalAmountSlider" type="HSlider" parent="MissionContainer/GridContainer2/HBoxContainer"]
margin_left = 236.0
margin_right = 484.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 1000.0
value = 75.0
rounded = true
tick_count = 10
ticks_on_borders = true
script = ExtResource( 4 )

[node name="VSeparator4" type="VSeparator" parent="MissionContainer/GridContainer2"]
margin_left = 492.0
margin_right = 508.0
margin_bottom = 20.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="MissionContainer/GridContainer2"]
margin_left = 516.0
margin_right = 1000.0
margin_bottom = 20.0

[node name="Section1b" type="Label" parent="MissionContainer/GridContainer2/HBoxContainer2"]
margin_top = 3.0
margin_right = 158.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Factories Collect... "
align = 2

[node name="Above" type="Button" parent="MissionContainer/GridContainer2/HBoxContainer2"]
margin_left = 162.0
margin_right = 321.0
margin_bottom = 20.0
size_flags_horizontal = 3
toggle_mode = true
pressed = true
group = ExtResource( 2 )
text = "From Above"

[node name="Below" type="Button" parent="MissionContainer/GridContainer2/HBoxContainer2"]
margin_left = 325.0
margin_right = 484.0
margin_bottom = 20.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 2 )
text = "From Below"

[node name="HBoxContainer3" type="HBoxContainer" parent="MissionContainer/GridContainer2"]
margin_top = 28.0
margin_right = 484.0
margin_bottom = 44.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MissionContainer/GridContainer2/HBoxContainer3"]
margin_top = 1.0
margin_right = 104.0
margin_bottom = 15.0
text = "Available Rings: "

[node name="N" type="Label" parent="MissionContainer/GridContainer2/HBoxContainer3"]
margin_left = 108.0
margin_top = 1.0
margin_right = 127.0
margin_bottom = 15.0
rect_min_size = Vector2( 19, 0 )
text = "1"
align = 2

[node name="RingsSlider" type="HSlider" parent="MissionContainer/GridContainer2/HBoxContainer3"]
margin_left = 131.0
margin_right = 484.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 10.0
value = 1.0
rounded = true
tick_count = 10
ticks_on_borders = true
script = ExtResource( 4 )

[node name="VSeparator5" type="VSeparator" parent="MissionContainer/GridContainer2"]
margin_left = 492.0
margin_top = 28.0
margin_right = 508.0
margin_bottom = 44.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer4" type="HBoxContainer" parent="MissionContainer/GridContainer2"]
margin_left = 516.0
margin_top = 28.0
margin_right = 1000.0
margin_bottom = 44.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MissionContainer/GridContainer2/HBoxContainer4"]
margin_top = 1.0
margin_right = 107.0
margin_bottom = 15.0
text = "Available Lanes: "

[node name="N" type="Label" parent="MissionContainer/GridContainer2/HBoxContainer4"]
margin_left = 111.0
margin_top = 1.0
margin_right = 130.0
margin_bottom = 15.0
rect_min_size = Vector2( 19, 0 )
text = "1"
align = 2

[node name="LanesSlider" type="HSlider" parent="MissionContainer/GridContainer2/HBoxContainer4"]
margin_left = 134.0
margin_right = 484.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 4.0
value = 1.0
rounded = true
tick_count = 4
ticks_on_borders = true
script = ExtResource( 4 )

[node name="HSectionSeparator" type="HBoxContainer" parent="MissionContainer"]
margin_top = 74.0
margin_right = 1000.0
margin_bottom = 88.0
custom_constants/separation = 16

[node name="Section" type="Label" parent="MissionContainer/HSectionSeparator"]
margin_right = 104.0
margin_bottom = 14.0
text = "Input Resources"

[node name="HSeparator" type="HSeparator" parent="MissionContainer/HSectionSeparator"]
margin_left = 120.0
margin_right = 1000.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="InputGridContainer" type="GridContainer" parent="MissionContainer"]
margin_top = 96.0
margin_right = 1000.0
margin_bottom = 172.0
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input0" parent="MissionContainer/InputGridContainer" instance=ExtResource( 6 )]
margin_right = 484.0

[node name="VSeparator" type="VSeparator" parent="MissionContainer/InputGridContainer"]
margin_left = 492.0
margin_right = 508.0
margin_bottom = 20.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input1" parent="MissionContainer/InputGridContainer" instance=ExtResource( 6 )]
margin_left = 516.0
margin_right = 1000.0

[node name="Input2" parent="MissionContainer/InputGridContainer" instance=ExtResource( 6 )]
margin_top = 28.0
margin_right = 484.0
margin_bottom = 48.0

[node name="VSeparator2" type="VSeparator" parent="MissionContainer/InputGridContainer"]
margin_left = 492.0
margin_top = 28.0
margin_right = 508.0
margin_bottom = 48.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input3" parent="MissionContainer/InputGridContainer" instance=ExtResource( 6 )]
margin_left = 516.0
margin_top = 28.0
margin_right = 1000.0
margin_bottom = 48.0

[node name="Input4" parent="MissionContainer/InputGridContainer" instance=ExtResource( 6 )]
margin_top = 56.0
margin_right = 484.0
margin_bottom = 76.0

[node name="VSeparator3" type="VSeparator" parent="MissionContainer/InputGridContainer"]
margin_left = 492.0
margin_top = 56.0
margin_right = 508.0
margin_bottom = 76.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input5" parent="MissionContainer/InputGridContainer" instance=ExtResource( 6 )]
margin_left = 516.0
margin_top = 56.0
margin_right = 1000.0
margin_bottom = 76.0

[node name="HSectionSeparator2" type="HBoxContainer" parent="MissionContainer"]
margin_top = 180.0
margin_right = 1000.0
margin_bottom = 194.0
custom_constants/separation = 16

[node name="Section" type="Label" parent="MissionContainer/HSectionSeparator2"]
margin_right = 116.0
margin_bottom = 14.0
text = "Available Recipies"

[node name="HSeparator" type="HSeparator" parent="MissionContainer/HSectionSeparator2"]
margin_left = 132.0
margin_right = 1000.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MissionContainer"]
margin_top = 202.0
margin_right = 1000.0
margin_bottom = 302.0
rect_min_size = Vector2( 0, 100 )
custom_styles/bg = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MissionContainer/ScrollContainer"]
margin_right = 1000.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="RecipiesGridContainer" type="GridContainer" parent="MissionContainer/ScrollContainer/MarginContainer" groups=[
"ResRecUpdateGroup",
]]
margin_left = 16.0
margin_top = 16.0
margin_right = 984.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 4
custom_constants/hseparation = 16
columns = 9
script = ExtResource( 5 )

[node name="KeepEnabled" type="Label" parent="MissionContainer/ScrollContainer/MarginContainer/RecipiesGridContainer"]
margin_right = 50.0
margin_bottom = 14.0
text = "Enabled"

[node name="KeepTime" type="Label" parent="MissionContainer/ScrollContainer/MarginContainer/RecipiesGridContainer"]
margin_left = 66.0
margin_right = 98.0
margin_bottom = 14.0
text = "Time"

[node name="KeepOutput" type="Label" parent="MissionContainer/ScrollContainer/MarginContainer/RecipiesGridContainer"]
margin_left = 114.0
margin_right = 159.0
margin_bottom = 14.0
text = "Output"

[node name="KeepEquals" type="MarginContainer" parent="MissionContainer/ScrollContainer/MarginContainer/RecipiesGridContainer"]
margin_left = 175.0
margin_right = 175.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeepInput0" type="Label" parent="MissionContainer/ScrollContainer/MarginContainer/RecipiesGridContainer"]
margin_left = 191.0
margin_right = 237.0
margin_bottom = 14.0
text = "Input 1"

[node name="KeepInput1" type="Label" parent="MissionContainer/ScrollContainer/MarginContainer/RecipiesGridContainer"]
margin_left = 253.0
margin_right = 299.0
margin_bottom = 14.0
text = "Input 2"

[node name="KeepInput2" type="Label" parent="MissionContainer/ScrollContainer/MarginContainer/RecipiesGridContainer"]
margin_left = 315.0
margin_right = 361.0
margin_bottom = 14.0
text = "Input 3"

[node name="KeepInput3" type="Label" parent="MissionContainer/ScrollContainer/MarginContainer/RecipiesGridContainer"]
margin_left = 377.0
margin_right = 423.0
margin_bottom = 14.0
text = "Input 4"

[node name="KeepNotes" type="Label" parent="MissionContainer/ScrollContainer/MarginContainer/RecipiesGridContainer"]
margin_left = 439.0
margin_right = 477.0
margin_bottom = 14.0
text = "Notes"

[node name="KeepHSeparator" type="HSeparator" parent="MissionContainer/ScrollContainer/MarginContainer/RecipiesGridContainer"]
margin_top = 18.0
margin_right = 50.0
margin_bottom = 22.0

[node name="KeepHSeparator2" type="HSeparator" parent="MissionContainer/ScrollContainer/MarginContainer/RecipiesGridContainer"]
margin_left = 66.0
margin_top = 18.0
margin_right = 98.0
margin_bottom = 22.0

[node name="KeepHSeparator3" type="HSeparator" parent="MissionContainer/ScrollContainer/MarginContainer/RecipiesGridContainer"]
margin_left = 114.0
margin_top = 18.0
margin_right = 159.0
margin_bottom = 22.0

[node name="KeepEquals2" type="MarginContainer" parent="MissionContainer/ScrollContainer/MarginContainer/RecipiesGridContainer"]
margin_left = 175.0
margin_top = 18.0
margin_right = 175.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeepHSeparator5" type="HSeparator" parent="MissionContainer/ScrollContainer/MarginContainer/RecipiesGridContainer"]
margin_left = 191.0
margin_top = 18.0
margin_right = 237.0
margin_bottom = 22.0

[node name="KeepHSeparator6" type="HSeparator" parent="MissionContainer/ScrollContainer/MarginContainer/RecipiesGridContainer"]
margin_left = 253.0
margin_top = 18.0
margin_right = 299.0
margin_bottom = 22.0

[node name="KeepHSeparator7" type="HSeparator" parent="MissionContainer/ScrollContainer/MarginContainer/RecipiesGridContainer"]
margin_left = 315.0
margin_top = 18.0
margin_right = 361.0
margin_bottom = 22.0

[node name="KeepHSeparator8" type="HSeparator" parent="MissionContainer/ScrollContainer/MarginContainer/RecipiesGridContainer"]
margin_left = 377.0
margin_top = 18.0
margin_right = 423.0
margin_bottom = 22.0

[node name="KeepHSeparator9" type="HSeparator" parent="MissionContainer/ScrollContainer/MarginContainer/RecipiesGridContainer"]
margin_left = 439.0
margin_top = 18.0
margin_right = 477.0
margin_bottom = 22.0

[node name="HSectionSeparator3" type="HBoxContainer" parent="MissionContainer"]
margin_top = 310.0
margin_right = 1000.0
margin_bottom = 324.0
custom_constants/separation = 16

[node name="Section" type="Label" parent="MissionContainer/HSectionSeparator3"]
margin_right = 120.0
margin_bottom = 14.0
text = "Available Resorces"

[node name="HSeparator" type="HSeparator" parent="MissionContainer/HSectionSeparator3"]
margin_left = 136.0
margin_right = 1000.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="ScrollContainer2" type="ScrollContainer" parent="MissionContainer"]
margin_top = 332.0
margin_right = 1000.0
margin_bottom = 432.0
rect_min_size = Vector2( 0, 100 )
custom_styles/bg = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MissionContainer/ScrollContainer2"]
margin_right = 1000.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="ResourceGridContainer" type="GridContainer" parent="MissionContainer/ScrollContainer2/MarginContainer" groups=[
"ResRecUpdateGroup",
]]
margin_left = 16.0
margin_top = 16.0
margin_right = 984.0
margin_bottom = 84.0
custom_constants/vseparation = 4
custom_constants/hseparation = 16
columns = 3
script = ExtResource( 3 )

[node name="KeepEnabled" type="Label" parent="MissionContainer/ScrollContainer2/MarginContainer/ResourceGridContainer"]
margin_right = 50.0
margin_bottom = 14.0
text = "Enabled"

[node name="KeepProduct" type="Label" parent="MissionContainer/ScrollContainer2/MarginContainer/ResourceGridContainer"]
margin_left = 66.0
margin_right = 115.0
margin_bottom = 14.0
text = "Product"

[node name="KeepNotes" type="Label" parent="MissionContainer/ScrollContainer2/MarginContainer/ResourceGridContainer"]
margin_left = 131.0
margin_right = 169.0
margin_bottom = 14.0
text = "Notes"

[node name="KeepHSeparator" type="HSeparator" parent="MissionContainer/ScrollContainer2/MarginContainer/ResourceGridContainer"]
margin_top = 18.0
margin_right = 50.0
margin_bottom = 22.0

[node name="KeepHSeparator2" type="HSeparator" parent="MissionContainer/ScrollContainer2/MarginContainer/ResourceGridContainer"]
margin_left = 66.0
margin_top = 18.0
margin_right = 115.0
margin_bottom = 22.0

[node name="KeepHSeparator3" type="HSeparator" parent="MissionContainer/ScrollContainer2/MarginContainer/ResourceGridContainer"]
margin_left = 131.0
margin_top = 18.0
margin_right = 169.0
margin_bottom = 22.0

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 1008.0
margin_bottom = 556.0

[node name="PopupDialog" type="AcceptDialog" parent="CenterContainer"]
margin_left = 271.0
margin_top = 228.0
margin_right = 728.0
margin_bottom = 320.0
popup_exclusive = true
window_title = "Warning"
dialog_text = "The goal cannot be reached given the current configuration.

Add the following resources to input lanes (or add derived resources)"

[connection signal="item_selected" from="MissionContainer/GridContainer2/HBoxContainer/GoalButton" to="MissionContainer/GridContainer2/HBoxContainer/GoalButton" method="_on_GoalButton_item_selected"]
[connection signal="pressed" from="MissionContainer/GridContainer2/HBoxContainer/WarningButton" to="MissionContainer" method="_on_WarningButton_pressed"]
[connection signal="value_changed" from="MissionContainer/GridContainer2/HBoxContainer/GoalAmountSlider" to="MissionContainer/GridContainer2/HBoxContainer/GoalAmountSlider" method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="MissionContainer/GridContainer2/HBoxContainer3/RingsSlider" to="MissionContainer/GridContainer2/HBoxContainer3/RingsSlider" method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="MissionContainer/GridContainer2/HBoxContainer4/LanesSlider" to="MissionContainer/GridContainer2/HBoxContainer4/LanesSlider" method="_on_HSlider_value_changed"]
